--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "react": "^18.0.0",
+    "react-async": "^10.0.1",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "styled-component": "^2.8.0",
